fix loader color flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body {
   -ms-user-select: none;
   user-select: none;
   -webkit-touch-callout: none;
-  background-color: #1f1f1f;
+  background-color: #1f1f1f !important;
 }
 
 body {
